--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,4 +9,5 @@ jobs:
     name: Hello World Job
     runs-on: ubuntu-latest # 実行環境
     steps: # 実行する内容
-      - run: echo "Hello World!"
+    #  - run: echo "Hello World!"
+      - docker run --rm ubuntu bash -c "echo 'こんにちは、Docker！'"
